fix: Add z-index to menu
Add z-index 999 to menu to make visible in mobile view when menu toggle

--- a/p6-1-neighborhood-map/src/css/style.css
+++ b/p6-1-neighborhood-map/src/css/style.css
@@ -17,6 +17,7 @@ body {
 /* Sidebar Menu */
 
 .menu {
+  z-index: 999 !important;
   color: #989898;
   overflow: hidden;
 }
